updates on project2